[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "extract domain info from a url"
documentation = "https://docs.rs/tldextract"
edition = "2018"
keywords = ["tld", "extract", "domain"]
license = "MIT"
name = "tldextract"
readme = "README.md"
repository = "https://github.com/dovahcrow/tldextract-rs"
version = "0.6.0"

[dependencies]
anyhow = "1"
futures = "0.3"
idna = "0.2"
log = "0.4"
regex = "1"
reqwest = "0.11"
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["rt"]}
url = "2"

[dev-dependencies]
env_logger = "0.9"
