[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "extract domain info from a url"
documentation = "https://docs.rs/tldextract"
edition = "2018"
keywords = ["tld", "extract", "domain"]
license = "MIT"
name = "tldextract"
readme = "README.md"
repository = "https://github.com/dovahcrow/tldextract-rs"
version = "0.6.0"

[dependencies]
anyhow = "1"
idna = "0.2"
log = "0.4"
regex = "1"
serde_json = "1"
thiserror = "1"
url = "2"
futures = {version="0.3", optional=true}
reqwest = {version = "0.11", optional=true}
tokio = {version = "1", optional=true, features = ["rt"]}

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
remote = ["tokio","reqwest", "futures"]
