[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "extract domain info from a url"
documentation = "https://docs.rs/tldextract"
edition = "2018"
keywords = ["tld", "extract", "domain"]
license = "MIT"
name = "tldextract"
readme = "README.md"
repository = "https://github.com/dovahcrow/tldextract-rs"
version = "0.6.0"

[dependencies]
idna = "1.0.3"
log = "0.4"
regex = "1"
serde_json = "1"
thiserror = "2"
url = "2"
futures = { version = "0.3", optional = true }
reqwest = { version = "0.12", optional = true }
tokio = { version = "1", optional = true, features = ["rt"] }
env_logger = "0.11"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
remote = ["tokio", "reqwest", "futures"]
